# AgentML

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.celery  Dockerfile.frontend  README.md  RUNBOOK.md  SECURITY.md  capabilities.md  docker-compose.local.yml  docker-compose.modal.yml  docker-compose.prod.yml  docker-compose.yml  fix_duplicates.py  testing.md  update_auto_ds_schema.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  check_mileage.py  modal_training_standalone.py  modal_worker.py  pyproject.toml  railway.toml  requirements.txt  start_services.bat  start_services.ps1  test_fixes_standalone.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_tasktype_enums.py  003_add_celery_task_id.py  006_add_agent_runs.py  (+30 more)
backend/app/: __init__.py  main.py
backend/tests/: conftest.py  test_agent.py  test_agent_executor.py  test_agent_pipeline.py  test_agent_run.py  test_agent_streaming.py  test_agent_tools.py  test_automl.py  test_data_architect_pipeline.py  test_data_profiler.py  test_data_sources.py  test_dataset_builder.py  test_dataset_downloader.py  test_dataset_specs.py  test_experiments.py  test_feature_engineering_fixes.py  test_file_upload.py  test_health.py  test_leakage_detector.py  test_models.py  test_orchestration.py  test_plan_critic.py  test_projects.py  test_relationship_discovery.py  test_research_cycles.py  test_results_pipeline.py  test_risk_scoring.py  test_schema_analyzer.py  test_task_context.py  test_training_dataset_builder.py  test_validation_samples.py
(+249 files in other folders)
